# concrete-ml

./: .coveragerc  .gitattributes  .gitbook.yaml  .gitignore  .gitleaksignore  CODE_OF_CONDUCT.md  CONTRIBUTING  LICENSE  Makefile  README.md  SUMMARY.md  UPGRADING.md  conftest.py  debug_preprocessors.py  flake8_others.cfg  flake8_src.cfg  local_link_check.py  private_dictionary.txt  pylintrc  pypi_readme.md  pyproject.toml  test.py
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  dot_release.md  feature_request.md  rc-release.md  release.md
.github/workflows/: benchmarks.yaml  check_github_actions.yaml  check_github_issues.yaml  ci_timing.yaml  cifar_benchmark.yaml  continuous-integration-common.yaml  continuous-integration.yaml  gpu-tests.yaml  llama_finetuning_benchmark.yaml  new_generation_benchmarks.yaml  prepare_release.yaml  publish_aws_ami.yaml  refresh-notebooks-gpu.yaml  refresh-notebooks.yaml  refresh-one-notebook.yaml  release.yaml  resnet_hybrid_model.yaml  run_one_use_cases_example.yaml  run_use_cases_examples.yaml  single_benchmark.yaml  sync_on_push.yaml  update_licenses.yaml  weekly-pip-audit.yaml  weekly_tests.yaml
benchmarks/: classification.py  cnn_mnist.py  common.py  convert.py  convert_cifar.py  deep_learning.py  fhe_embedding.py  glm.py  linear_regression.py  llama_lora_math_benchmark.py  logistic_regression.py  regression.py
benchmarks/pre_trained_models/: MNIST_Deep100CNN.pt  MNIST_Deep20CNN.pt  MNIST_Deep50CNN.pt  MNIST_DeepNarrowCNN.pt  MNIST_DeepWideCNN.pt  MNIST_ShallowNarrowCNN.pt  MNIST_ShallowWideCNN.pt
ci/: aws_ami_build_component.yaml  slab.toml
demo_project/src/: main.rs
deps_licenses/: licenses_linux_user.txt  licenses_linux_user.txt.md5  licenses_mac_intel_user.txt  licenses_mac_intel_user.txt.md5  licenses_mac_silicon_user.txt  licenses_mac_silicon_user.txt.md5  licenses_mac_user.txt  licenses_mac_user.txt.md5
docker/: Dockerfile.dev  Dockerfile.release  build_release_image.sh
docker/release_resources/: entry_point.sh  release_requirements.txt  sanity_check.py
docs/: EXAMPLES.md  INTRO.md  README.md  SUMMARY.md  advanced_examples.md  client_server.md  cn_summation.md  compilation.md  compilation_onnx.md  concrete_numpy.md  conf.py  contributing.md  conventions.md  conventions.txt  custom_models.md  debug_support_submit_issues.md  dl_examples.md  docker.md  docker_installing.md  docker_setup.md  documenting.md  fhe_assistant.md  fhe_constraints.md  fhe_friendly_models.md  hummingbird_usage.md  index.rst  index.toc.txt  linear.md  ml_examples.md  neural_network.md  onnx.md  onnx_pipeline.md  onnx_support.md  pandas.md  pip_installing.md  preprocessing.md  project_setup.md  pruning.md  quantization.md  quantized_neural_networks.md  (+5 more)
docs/advanced-topics/: advanced_features.md  client_server.md  compilation.md  fhe-op-graphs.md  hummingbird_usage.md  hybrid-models.md  onnx_pipeline.md  prediction_with_fhe.md  pruning.md  quantization.md  serialization.md  skorch_usage.md
docs/advanced_examples/: .gitignore  AutoRounding.ipynb  ClassifierComparison.ipynb  ClientServer.ipynb  ConvolutionalNeuralNetwork.ipynb  DecisionTreeClassifier.ipynb  DecisionTreeRegressor.ipynb  Deployment.ipynb  EncryptedPandas.ipynb  EncryptedPandasSchema.ipynb  ExperimentPrivacyTreePaper.ipynb  FullyConnectedNeuralNetwork.ipynb  FullyConnectedNeuralNetworkOnMNIST.ipynb  GLMComparison.ipynb  ImportingFromScikitLearn.ipynb  KNearestNeighbors.ipynb  KaggleTitanic.ipynb  LinearRegression.ipynb  LinearSVR.ipynb  LoRAFinetuning.ipynb  LogisticRegression.ipynb  LogisticRegressionTraining.ipynb  LoraMLP.ipynb  PoissonRegression.ipynb  PreProcessor.ipynb  QuantizationAwareTraining.ipynb  ReggresorComparison.ipynb  RegressorComparison.ipynb  SVMClassifier.ipynb  SentimentClassification.ipynb  XGBClassifier.ipynb  XGBRegressor.ipynb  aggregated_code.txt  index.rst  ppml_school_demo.ipynb
docs/built-in-models/: encrypted_dataframe.md  linear.md  ml_examples.md  nearest-neighbors.md  neural-networks.md  pandas.md  training.md  tree.md
docs/deep-learning/: examples.md  fhe_assistant.md  fhe_friendly_models.md  lora_training.md  onnx_support.md  optimizing_inference.md  torch_support.md
docs/dev/: index.rst
docs/developer/: contributing.md  debug_support_submit_issues.md  docker_setup.md  documenting.md  project_setup.md  support_new_onnx_node.md
docs/developer-guide/: api.md  contributing.md  debug_support_submit_issues.md  docker_setup.md  documenting.md  external_libraries.md  fhe-op-graphs.md  onnx_pipeline.md  project_setup.md  quantization_internal.md
docs/explanations/: advanced_features.md  compilation.md  pruning.md  quantization.md  security_and_correctness.md
docs/getting-started/: README.md  cloud.md  concepts.md  concrete_numpy.md  pip_installing.md  readme.md  showcase.md
docs/guides/: client_server.md  hybrid-models.md  prediction_with_fhe.md  serialization.md  using_gpu.md
docs/llm/: inference.md  lora_training.md
docs/tutorials/: dl_examples.md  examples.md  ml_examples.md  showcase.md
docs/user/: index.rst
script/actions_utils/: actions_combine_status.py  benchmark_aws.py  check_branch_not_remote.sh  check_tag_not_remote.sh  check_tag_release_in_branch_main_or_release.py  convert.py  coverage_report_format.py  escape_quotes.py  generate_scripts_benchmark.py  generate_test_matrix.py  generate_versions_json.py  get_latest_run.sh  get_pytest_latest_failed_flakies.py  json_length.py  monitor.py  parse_pip_audit_vulns.py  pytest_failed_test_report.py  re_run_last_failed_flaky_tests.sh  refresh_notebooks_list.py  refresh_use_cases_list.py  run_commands.py  update_slab_github_runner.sh
script/doc_utils/: api_doc_pdf.sh  check_all_images_are_used.py  check_apidocs.sh  check_forbidden_words.py  check_no_gitbook_links.sh  fix_api_readme_reference.py  fix_gitbook_table.py  (+6 more)
tests/: conftest.py
use_case_examples/: time_notebook_execution.sh
use_case_examples/tfhers_demo/: Cargo.toml  TfhersWithCML.ipynb
use_case_examples/tfhers_demo/src/: main.rs  simple_test_plaintext.rs  simple_test_tfhers.rs
(+835 files in other folders)
