[package]
name = "tfhers_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde-pickle = "0.6"
serde_json = "1.0.139"
bincode = "1.3.3"
ciborium = "0.2"
base64 = "0.21"

# tfhe = { version = "0.7.4", features = ["integer", "x86_64-unix" ] }
# tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", rev = "cec3d0e76b78272b6a799340329f1ec985581e13", features = ["integer", "seeder_unix"] }
# tfhe = { version = "0.10.0", features = ["integer", "seeder_unix"] }

tfhe = { version = "~1.0.0", features = ["boolean", "shortint", "integer"] }

